# RequestRepo-MCP

./: LICENSE  README.md  TOOLS.md  pyproject.toml
.github/workflows/: ci.yml
src/requestrepo_mcp/: __init__.py  client.py  config.py  schemas.py  serializers.py  server.py
tests/: test_client.py  test_config.py  test_serializers.py  test_service.py  test_smoke.py
